Update refs to DPaW. Update settings config to current practices.

--- a/ibms_project/templates/login.html
+++ b/ibms_project/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="col-xs-12">
-    <h4>Please log in with your DPaW username and password:</h4>
+    <h4>Please log in with your Department username and password:</h4>
     <form class="form-horizontal" action="" method="POST">
         {% csrf_token %}
         {% if form.errors %}
