Update to using webtemplate_dbca.

--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -1,4 +1,4 @@
-{% extends "webtemplate_dpaw/base.html" %}
+{% extends "webtemplate_dbca/base.html" %}
 {% load static from staticfiles %}
 
 {% block extra_style %}
@@ -83,5 +83,3 @@
     </div>
 </div>
 {% endblock %}
-
-{% block bootflat_js %}{% endblock %}
