--- a/ibms_project/templates/sidebar.html
+++ b/ibms_project/templates/sidebar.html
@@ -3,7 +3,8 @@
     {% if superuser %}<a class="list-group-item" id="superuser_upload" href="{% url 'upload' %}">Upload</a>{% endif %}
     <a class="list-group-item" href="{% url 'download' %}">Download</a>
     <a class="list-group-item" href="{% url 'reload' %}">Reload</a>
-    <a class="list-group-item" href="{% url 'code_update' %}">Code update</a>
+    <a class="list-group-item" href="{% url 'code_update' 'v=' %}">Code update</a>
+    {% if superuser %}<a class="list-group-item" href="{% url 'code_update' 'v=AdminReportsView' %}">Code update (admin)</a>{% endif %}
     <a class="list-group-item" href="{% url 'serviceprioritydata' %}">Service Priority data</a>
     <a class="list-group-item" href="{% url 'dataamendment' %}">Data Amendment</a>
     <a class="list-group-item active" href="#">FM OUTPUT TOOLS</a>
