Updates as requested. imbs_reloads jobs are sorted and sheet 1 is default. Check all box not appearing on non-admin page.

--- a/ibms_project/ibms/templates/ibms/code_update.html
+++ b/ibms_project/ibms/templates/ibms/code_update.html
@@ -2,7 +2,9 @@
 
 {% block check_all_button %}
 {% if superuser %}
+{% if request.path != '/code-update/v=' %}
 <button id="checkAll" type="button" class="btn btn-sm btn-success">Check/uncheck all</button></button>
+{% endif %}
 {% endif %}
 {% endblock %}
 
