Changes added to unselect checkboxes when region is selected

--- a/ibms_project/ibms/templates/ibms/data_amendment.html
+++ b/ibms_project/ibms/templates/ibms/data_amendment.html
@@ -245,7 +245,7 @@
             $("#id_cost_centre")[0].selectedIndex = 0;
 
 
-            uncheckMappedBoxes(data.choices); //Extra line to uncheck when regiom is selected
+            checkMappedBoxes([]); //Extra line to uncheck when regiom is selected
 
         });
 
