Update help/instructions on home page.

--- a/ibms_project/templates/site_home.html
+++ b/ibms_project/templates/site_home.html
@@ -14,14 +14,14 @@
         <div class="col-sm-12 col-md-6 col-lg-5">
             <h4>IBMS WORK INSTRUCTIONS</h4>
             <ul>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_General.doc">Useful links</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_Reload_Regions.doc">Reload - regions</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_Reload_OtherDivisions.doc">Reload - other divisions</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_CodeUpdate.doc">Code update</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_SerPriData.doc">Service priority data</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_DataAmend.doc">Data amendments</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_Combo_Report.doc">Combo Report</a></li>
-                <li><a href="{{ confluence_url }}/download/attachments/16646472/IBMS_WorkIns_SFM_Outcome.doc">FM - outputs</a></li>
+                <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/Eb5dhLrsNNxPqDtwp-eQ42QBShIB_vhzgT15sdVrd92o5A?e=I3tjdX">Annual Budget Template / Reload Instructions</a></li>
+                <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/EUTOA9bXbxdBoTbIwTwGbVYBUi7vdLdNYcaPprq0xkXJMw?e=6xo9ym">IBMS General Information</a></li>
+                <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/EUYNRZA0uidNtSlQQOl5bNsB5KYWo5uAveyfHo02S2Gkkw?e=NKMnDj">Code Update / Data Amendment Instructions</a></li>
+            </ul>
+            <h4>IBMS USER FOLDERS</h4>
+            <ul>
+                <li><a href="https://dpaw.sharepoint.com/:f:/s/ibmsusers/EjDJH49I0oRIvl1ELhiFeUsBkfL0IpJQF2Zv5MOMQejp6Q?e=pBMopm">General User Information (Code Update/Data Amendment/Budget Templates)</a></li>
+                <li><a href="https://dpaw.sharepoint.com/:f:/s/ibmsusers/EtP_A4yLjdxGvIxN8Y35obEB9niKw6n8ZGr-MyrEWHIWtA?e=yXV4cN">Folder for User Uploads</a></li>
             </ul>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-5">
