Update Django to 3.0.4, template updates to suit.

--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -1,5 +1,5 @@
 {% extends "webtemplate_dbca/base_b4.html" %}
-{% load static from staticfiles %}
+{% load static %}
 
 {% block extra_style %}
 {{ block.super }}
