--- a/ibms_project/sfm/templates/sfm/outputs.html
+++ b/ibms_project/sfm/templates/sfm/outputs.html
@@ -1,7 +1,17 @@
 {% extends "ibms/form.html" %}
 
+{% block page_content_inner %}
+{{ block.super }}
+<div class="toast" id="saveConfirm" style="position: absolute; bottom: 0; right: 0;">
+	<div class="toast-body">
+		<div>Measurement value saved successfully.</div>
+	</div>
+</div>
+{% endblock %}
+
 {% block extra_js %}
 <script type="text/javascript">
+
     // Utility function to update Quarter select field when financial year changes.
     function updateQuarter(finYear) {
         $("select#id_quarter")[0].disabled = true;
@@ -20,7 +30,8 @@
         });
         $("select#id_quarter")[0].disabled = false;
     };
-    // Utility function to update Quarter select field when financial year changes.
+
+    // Utility function to update Metric ID select field when financial year changes.
     function updateSfmMetricId(finYear) {
         $("select#id_sfm_metric_id")[0].disabled = true;
         $.ajax({
@@ -39,18 +50,6 @@
         $("select#id_sfm_metric_id")[0].disabled = false;
     };
 
-    function getMeasurementType(typeId) {
-        // Pass in a measurement type int, returns a string of the type.
-        // Used to match an input field.
-        var measurementTypes = {{ measurement_types|safe }};
-        for (var i=0; i<measurementTypes.length; i++) {
-            if (measurementTypes[i][0] == typeId) {
-                return measurementTypes[i][1];
-            }
-        }
-        return 'quantity';  // No match.
-    };
-
     // Utility function to query for MeasurementValue object values.
     function updateMeasurementValue(quarter, costCentre, sfmMetric) {
         $.ajax({
@@ -64,16 +63,21 @@
             success: function(data) {
                 $("span#id_descriptor_text").text(data.sfmMetric.descriptor);
                 $("span#id_example_text").text(data.sfmMetric.example);
-                for (var i=0; i<data.measurementValues.length; i++) {
-                    var mv = data.measurementValues[i];
-                    var mt = getMeasurementType(mv.measurementType_id);
-                    $("input[name='" + mt + "']").val(mv.value);
-                    $("textarea[name='comment']").val(mv.comment);
-                }
+                $("input:radio[name=planned]").val([data.measurementValue.planned]);
+                $("input:radio[name=status]").val([data.measurementValue.status]);
+                $("textarea#id_comment").val(data.measurementValue.comment);
             }
         });
     };
-    // Check if all select lists have values.
+
+    function hideFields() {
+        $("div#id_input_div").hide();
+    };
+
+
+    // Check if all select lists have values selected.
+    // If so, query for any existing measure and insert that into the input fields.
+    // If not, call clearInputValues().
     function checkValues() {
         var finYear = $("select#id_financial_year").val();
         var quarter = $("select#id_quarter").val();
@@ -82,44 +86,75 @@
 
         if (finYear && quarter && costCentre && sfmMetric) {
             updateMeasurementValue(quarter, costCentre, sfmMetric);
-            $("div#id_descriptor_row").show();
-            $("div#id_measurement_fields").show();
-            $("div#id_example_row").show();
+            $("div#id_input_div").show();
             $("input#submit-id-save").removeAttr("disabled");
         } else {
-            $("div#id_descriptor_row").hide();
-            $("div#id_measurement_fields").hide();
-            $("div#id_example_row").hide();
+            clearInputValues();
+            $("div#id_input_div").hide();
             $("input#submit-id-save").attr("disabled", "disabled");
         }
     };
-    // Clear value input fields.
+
+    // Clear description and input field values.
     function clearInputValues() {
-        $("input, textarea").not(":input[type=submit],:input[type=hidden]").val("");
+        $("span#id_descriptor_text").text("");
+        $("input:radio[name=planned]").prop("checked", false);
+        $("input:radio[name=status]").prop("checked", false);
+        $("textarea#id_comment").val("");
+        $("span#id_example_text").text("");
     };
 
-    // ------------------------------------
-    $(function() {
-        $("select#id_quarter")[0].disabled = true;
-        var finYear = $("select#id_financial_year").val();
-        checkValues();
-
-        // Check the Financial year select. If it has a value (if form fails validation, etc),
-        // then ensure that the other selects are enabled.
-        if (finYear) {
-            $("select.select").each(function() {
-                this.disabled = false;
-            });
+    function saveMeasure() {
+        var data = {
+            finYear: $("select#id_financial_year").val(),
+            quarter: $("select#id_quarter").val(),
+            costCentre: $("select#id_cost_centre").val(),
+            sfmMetric: $("select#id_sfm_metric_id").val(),
+            planned: $("input:radio[name=planned]:checked").val() == "true",
+            status: $("input:radio[name=status]:checked").val(),
+            comment: $("textarea#id_comment").val(),
         };
+        $.ajax({
+            type: "POST",
+            url: "{% url 'ajax_measurementvalue' %}",
+            data: data,
+            success: function(data) {
+                $("#saveConfirm").toast('show');
+            }
+        });
+    }
 
-        // If the Financial Year select list changes, update the options for
-        // cost centre, region/branch and division.
+    // ------------------------------------
+    // Onready functions.
+    $(function() {
+        // Configure the toast notification popup.
+        $("#saveConfirm").toast({
+            delay: 2000,
+        });
+
+        // Disable the form submit default behaviour.
+        $("form").submit(function (event) {
+            event.preventDefault();
+            // Post the values to the ajax endpoint.
+            saveMeasure();
+        });
+
+        // Disable some selects and the save button to start with.
+        $("select#id_quarter")[0].disabled = true;
+        $("select#id_sfm_metric_id")[0].disabled = true;
+        $("div#id_input_div").hide();
+        $("input#submit-id-save")[0].disabled = true;
+
+        // If the Financial Year select list changes, update the options for quarter and metric ID.
         $("select#id_financial_year").change(function() {
+            $("div#id_input_div").hide();
             finYear = $("select#id_financial_year").val();
             updateQuarter(finYear);
             updateSfmMetricId(finYear);
         });
-        $(".select").change(function() {
+
+        // If any other select list changes, check if the measure fields should be updated.
+        $(".select:not(#id_financial_year)").change(function() {
             clearInputValues();
             checkValues();
         });
